<resources>
    <string name="app_name">Instagram</string>
    <string name="image">image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forget_your_account_details">Forget your account details?</string>
    <string name="get_help_signing">Get help signing</string>
    <string name="or">OR</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up.</string>
    <string name="username">Username</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="don_t_know_how_to_sign_up">Don\'t know how to sign up?</string>
    <string name="sign_in">Sign in.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up_button">Sign up</string>
    <string name="muhammad">Muhammad</string>
    <string name="action_settings">action settings</string>
    <string name="new_post">New post</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
</resources>